# MCU-Driver-HAL

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  RELEASE-NOTES.md
.github/workflows/: BR-doxygen-publish.yml  PM-doxygen-publish.yml  PR-doxygen-check.yml
bootstrap/: CMakeLists.txt  RTE_Components.h  mbed_application.c  mbed_application.h  mbed_assert.c  mbed_assert.h  mbed_atomic.h  mbed_atomic_impl.h  mbed_boot.c  mbed_boot.h  mbed_cmsis_conf.h  mbed_critical.c  mbed_critical.h  mbed_debug.h  mbed_error.c  mbed_error.h  mbed_mpu_mgmt.c  mbed_mpu_mgmt.h  mbed_preprocessor.h  mbed_printf_armlink_overrides.c  mbed_printf_implementation.c  mbed_printf_implementation.h  mbed_printf_wrapper.c  mbed_retarget.h  mbed_toolchain.h  mbed_trace.c  mbed_trace.h  mbed_wait_api.h  mbed_wait_api_no_rtos.c
docs/: README.md  index.html
docs/bootstrap/: BOOTSTRAP.md
docs/doxygen/: README.md  doxyfile_options  doxygen_mainpage.md
docs/porting/: PORTING.md  README.md  cmake.md  startup.md  thread_safety.md
docs/user/: README.md  debugging_with_visual_studio_code.md
examples/: README.md
examples/flash/: CMakeLists.txt  main.c
examples/gpio/: CMakeLists.txt  main.c
examples/interrupt/: CMakeLists.txt  main.c
examples/serial/: CMakeLists.txt  main.c
examples/spi/: CMakeLists.txt  main.c
examples/trace/: CMakeLists.txt  main.c
examples/trng/: CMakeLists.txt  main.c
examples/us_ticker/: CMakeLists.txt
examples/us_ticker_delay/: CMakeLists.txt  main.c
examples/us_ticker_interrupt/: CMakeLists.txt
hal/: CMakeLists.txt
hal/source/: mbed_compat.c  mbed_critical_section_api.c  mbed_flash_api.c  mbed_gpio.c  mbed_gpio_irq.c  mbed_itm_api.c  mbed_lp_ticker_api.c  mbed_pinmap_common.c  mbed_pinmap_default.cpp  mbed_ticker_api.c  mbed_us_ticker_api.c  static_pinmap.cpp
hal/utils/: buffer.h  critical_section_api.h
tests/host_tests/: reset_reason.py  rtc_calc_auto.py  rtc_reset.py  sync_on_reset.py  system_reset.py  timing_drift_auto.py  trng_reset.py  watchdog_reset.py
tests/mbed_hal/common_tickers/: CMakeLists.txt  main.cpp
tests/mbed_hal/common_tickers_freq/: CMakeLists.txt  main.cpp
tests/mbed_hal/echo/: CMakeLists.txt  main.cpp
tests/mbed_hal/trng/: CMakeLists.txt  main.cpp
tests/mbed_hal/trng/base64b/: base64b.cpp  base64b.h
tests/mbed_hal/us_ticker/: CMakeLists.txt  main.cpp  us_ticker_api_tests.h
tests/mbed_hal_fpga_ci_test_shield/: CMakeLists.txt
tools/cmake/: CheckPythonPackage.cmake  app.cmake  mbed_greentea.cmake  mbed_profile.cmake  mbed_set_linker_script.cmake  mbed_set_post_build.cmake  mbed_toolchain.cmake
tools/greentea-custom_io/: CMakeLists.txt
(+501 files in other folders)
